@@ -116,14 +116,16 @@ html_init (DhHtml *html)
         
 	priv = g_new0 (DhHtmlPriv, 1);
 
-	priv->gecko = (GtkMozEmbed *) gtk_moz_embed_new ();
-
 	profile_path = g_build_filename (dh_dot_dir (),
 					 "mozilla",
 					 NULL);
 	
-	gtk_moz_embed_set_profile_path (profile_path, "Devhelp");
+        gtk_moz_embed_set_profile_path (profile_path, "Devhelp");
 	g_free (profile_path);
+
+	priv->gecko = (GtkMozEmbed *) gtk_moz_embed_new ();
+
+        dh_gecko_utils_set_font_unit ("pt");
 
 	g_signal_connect (priv->gecko, "title",
 			  G_CALLBACK (html_title_cb),
