@@ -1,3 +1,10 @@
+2004-10-21  Mikael Hallendal  <micke@imendio.com>
+
+	* src/dh-gecko-utils.cpp:
+	* src/dh-gecko-utils.h:
+	* src/dh-html.c: (html_init):
+        - Set font unit to pt for gecko widget.
+
 2004-10-06  Christian Persch  <chpe@cvs.gnome.org>
 
 	* Makefile.am:
